# cjson

./: README.md  build.sh  clean.sh  configure.sh  meson.build
src/: cjson.c  mem.c
src/include/: cjson.h  macro.h  mem.h
tests/: cjson-init.c  meson.build
tests/macro/: macro-test.c
